periodic scheduling (#375)
* record durations per worker, only on success

* support custom text on tasklink

* display worker-based durations on schedule

* first stab at smarter task offering

* added periodicity edition

* harmonizing datetime use to naive UTC.

schedule clone to wipe cloned duration

* added periodicity field to schedule

* added periodic scheduler

- factorized request_a_schedule()
- request_tasks_using_schedule() can be run at any time

* set default duration on creation POST

* reorganized task finder to reduce complexity

* more refactoring to reduce complexity

* changing /requested-tasks/worker endpoint to return optimized result

* task may not contain worker name

* comments and prevent incorrect UUID from raising error

* added /auth endpoints tests

* using bionic on travis for newer openssl
